<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tHi"
        android:layout_width="377dp"
        android:layout_height="82dp"
        android:text="@string/tHello"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/tsambutan"
        android:layout_width="295dp"
        android:layout_height="45dp"
        android:text="@string/txtsambutan"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tHi"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/btnlanjut"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:text="@string/btnlanjut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tsambutan"
        app:layout_constraintVertical_bias="0.32" />

</androidx.constraintlayout.widget.ConstraintLayout>