<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="146dp"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        app:srcCompat="@drawable/gmbr1"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/black"
        android:ems="10"
        android:hint="@string/tEmail"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392" /><![CDATA[

    />

    ]]>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/black"
        android:ems="10"
        android:hint="@string/tPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />

    <Button
        android:id="@+id/btnmsk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#FF000000"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/tsignin"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.221" />

    <Button
        android:id="@+id/btnlppw"
        android:layout_width="115dp"
        android:layout_height="28dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#FF000000"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/tlupapw"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="6sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmsk"
        app:layout_constraintVertical_bias="0.061" />

</androidx.constraintlayout.widget.ConstraintLayout>